--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 # Site settings
 # YAML cheat sheet: https://quickref.me/yaml
 
-title: "Eleventy Sveltia CMS Starter"
+title: "Living Life"
 description: "A template for building a fast Eleventy blog with Sveltia CMS, for deployment to Netlify"
-url: "https://sveltia-cms.danurbanowicz.com"
+url: "https://sveltia.paulapplegate.com"
